--- a/experience/index.html
+++ b/experience/index.html
@@ -39,15 +39,26 @@
 
 <h4 id="android-developer">ANDROID DEVELOPER</h4>
 
-<p>July 2017 – Currently<br />
-<code>Blanc Labs</code></p>
+<p>October 2018 – Currently<br />
+<code>Nisum</code></p>
 
-<p>I am working in the construction and development of Android native applications using Kotlin most of the time.
-Also, I am working with gRPC, RxJava, Material Design, Git, Java, XML, WebServices, Gradle, Unit testing, dependency injection, Data-binding, Architecture MVVM, Android Architecture Components (Live Data and ViewModel) and Android libraries.</p>
+<p>I am working in the construction and development of Bci bank application using Java &amp; Kotlin.</p>
+
+<p>Also, I am working with http services, RxJava, Material Design, Git, Java, XML, WebServices, Gradle, Unit testing, dependency injection, Clean Architecture, Android Architecture Components (Live Data and ViewModel) and Android libraries.</p>
 
 <p></br></p>
 
 <h4 id="android-developer-1">ANDROID DEVELOPER</h4>
+
+<p>July 2017 – October 2018<br />
+<code>Blanc Labs</code></p>
+
+<p>In Blanc Labs I was working in the construction and development of Android native applications using Kotlin most of the time.
+Also, I am working with gRPC, RxJava, Material Design, Git, Java, XML, WebServices, Gradle, Unit testing, dependency injection, Data-binding, Architecture MVVM, Android Architecture Components (Live Data and ViewModel) and Android libraries.</p>
+
+<p></br></p>
+
+<h4 id="android-developer-2">ANDROID DEVELOPER</h4>
 
 <p>October 2015 – July 2017<br />
 <code>Tappsi</code></p>
@@ -57,7 +68,7 @@ Also, I worked with Material Design, Git, Java, XML, WebServices and Android lib
 
 <p></br></p>
 
-<h4 id="android-developer-2">ANDROID DEVELOPER</h4>
+<h4 id="android-developer-3">ANDROID DEVELOPER</h4>
 
 <p>March 2014 – May 2015<br />
 <code>Periferia IT</code></p>
@@ -75,7 +86,7 @@ Also, I worked with Material Design, Git, Java, XML, WebServices and Android lib
 
 <p></br></p>
 
-<h4 id="android-developer-3">ANDROID DEVELOPER</h4>
+<h4 id="android-developer-4">ANDROID DEVELOPER</h4>
 
 <p>March 2011 – January 2013<br />
 <code>Freelance</code></p>
