--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -38,6 +38,10 @@
 <body><div class="wrap"><div class="section" id="title">Portofolio</div><div class="section" id="content"><p>Applications below are part of the portfolio in which I have worked:</p>
 
 <p></br>
+<a href="https://play.google.com/store/apps/details?id=cl.bci.app.personas">Bci</a><br />
+Banking app to make transactions, payments and know about credits and account details.</p>
+
+<p></br>
 <a href="https://play.google.com/store/apps/details?id=com.blanclink.nekso.passenger">Nekso Passenger</a> &amp;
 <a href="https://play.google.com/store/apps/details?id=com.blanclink.nekso.driver">Nekso Driver</a><br />
 Nekso is a transportation ecosystem that connects passengers to a network of taxi companies.</p>
